--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Gary Shawn Buyn</title>
+		<title>Gary / Gyan</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
@@ -11,25 +11,16 @@
 
 	<body>
 		<div id="header">
-			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
 			<div id="menu">
-				<a href="spirituality.html">Spirituality</a>
-				<a href="food.html">Food</a>
-				<!--a href="community.html">Community</a>
-				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a-->
-				<a href="contactme.html">Contact</a>
-			</div>
-			<div id="menu">
-				<a href="games.html">Games</a>
+				<a href="osho.html">Osho</a>
 				<a href="software.html">Software</a>
-				<a href="travel.html">Travel</a>
 				<a href="film.html">Film</a>
-				<!--a href="contactme.html">Contact</a-->
+				<a href="campers.html">Campers</a>
+				<h2>Contact</h2>
 			</div>
 		</div>
 
-		<h2>Contact</h2>
 		022 675 4763
 		</br>
 		<a href="nz.linkedin.com/in/simplegsb">LinkedIn Profile</a>
