--- a/film.html
+++ b/film.html
@@ -2,88 +2,51 @@
 <html>
 
 	<head>
-		<title>Gary Shawn Buyn</title>
+		<title>Gary / Gyan</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 
 	<body>
 		<div id="header">
-			<h1><a href="index.html">Gary Shawn Buyn</a></h1>
+			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
 			<div id="menu">
-				<a href="spirituality.html">Spirituality</a>
-				<a href="food.html">Food</a>
-				<!--a href="community.html">Community</a>
-				<a href="sustainability.html">Sustainability</a>
-				<a href="opensource.html">Open Source</a-->
-				<a href="contactme.html">Contact</a>
-			</div>
-			<div id="menu">
-				<a href="games.html">Games</a>
+				<a href="osho.html">Osho</a>
 				<a href="software.html">Software</a>
-				<a href="travel.html">Travel</a>
-				<a href="film.html">Film</a>
-				<!--a href="contactme.html">Contact</a-->
+				<h2>Film</h2>
+				<a href="campers.html">Campers</a>
+				<a href="contact.html">Contact</a>
 			</div>
 		</div>
-
-		<h2>Film</h2>
 
 		<p>
 			At University I took a couple of Screen and Media papers as my electorates. Most of what I've made has no seriousness at all and I like that.
 		</p>
 
-		<h3>Personal Projects</h3>
+		<a onclick="selectSection('section', 'str8Gangsta');"><h3>Str8 Gangsta</h3></a>
+		<div id="str8Gangsta" class="section">
+			<p>
+				An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.
+			</p>
 
-		<h4>Str8 Gangsta</h4>
+			<video src="videos/str8-gangsta.ogg" controls="controls" preload="metadata">
+				No video for you sonny jim, your browser doesn't support it.
+			</video>
+		</div>
+		
+		<a onclick="selectSection('section', 'bigDeal');"><h3>Big Deal</h3></a>
+		<div id="bigDeal" class="section">
+			<p>
+				Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.
+			</p>
 
-		<p>
-			An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.
-		</p>
-
-		<video src="videos/str8-gangsta.ogg" controls="controls" preload="metadata">
-			No video for you sonny jim, your browser doesn't support it.
-		</video>
-
-		<h4>Big Deal</h4>
-
-		<p>
-			Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.
-		</p>
-
-		<video src="videos/big-deal.ogg" controls="controls" preload="metadata">
-			No video for you sonny jim, your browser doesn't support it.
-		</video>
-
-		<!--h3>University</h3>
-
-		<h4>Supernova</h4>
-
-		<p>An editing project - with metal!</p>
-
-		<video src="videos/supernova.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, your browser doesn't support it.
-		</video>
-
-		<h3>Big TV</h3>
-
-		<p>Big TV is (or at least was) the student TV station at the University of Waikato.</p>
-
-		<h4>Destructive Love</h4>
-
-		<video src="videos/destructive-love-pre-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, your browser doesn't support it.
-		</video>
-
-		<video src="videos/destructive-love-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, your browser doesn't support it.
-		</video>
-
-		<video src="videos/destructive-love-post-production.ogg" controls="controls" preload="metadata">
-		No video for you sonny jim, your browser doesn't support it.
-		</video-->
+			<video src="videos/big-deal.ogg" controls="controls" preload="metadata">
+				No video for you sonny jim, your browser doesn't support it.
+			</video>
+		</div>
 	</body>
 
 </html>
