--- a/osho.html
+++ b/osho.html
@@ -29,7 +29,7 @@
 		<a onclick="selectSection('section', 'oimr');"><h3>OSHO International Meditation Resort <a href="http://www.osho.com/visit">(website)</a></h3></a>
 		<div id="oimr" class="section">
 			<p>
-				I spent 3 months in the meditation resort, Pune, India (Nov 2014 - Feb 2015). It is a place of experimentation. There is a lot on offer, lots of OSHO meditations, the OSHO meditative therapies, courses in Tantra etc.
+				I spent 3 months in the meditation resort, Pune, India (Nov 2014 - Feb 2015). It is a place of experimentation. There is a lot on offer, lots of OSHO meditations, the OSHO meditative therapies and various courses and sessions.
 			</p>
 
 			<p>
