--- a/software.html
+++ b/software.html
@@ -144,7 +144,7 @@
 			<img src="images/the-simplicity-engine.png" alt="The Simplicity Engine" />
 
 			<p>
-				The Simplicity Engine is a homegrown component-based game engine I created. Originally it was written in Java but I ported it to C++11. This engine was superceded by the GazEngine middleware I used for my projects at Media Design School where I could not use C++11. I have now taken the much more comprehensive and tested code from GazEngine back to The Simplicity Engine and C++11 and continued to expand on it.
+				The Simplicity Engine is a homegrown component-based game engine I created. Originally it was written in Java but I ported it to C++11. This engine was superceded by the <a onclick="openSection('section', 'mediaDesignSchool'); openSection('subSection', 'gazEngine');">GazEngine</a> middleware I used for my projects at Media Design School where I could not use C++11. I have now taken the much more comprehensive and tested code from <a onclick="openSection('section', 'mediaDesignSchool'); openSection('subSection', 'gazEngine');">GazEngine</a> back to The Simplicity Engine and C++11 and continued to expand on it.
 			</p>
 
 			<table>
@@ -352,7 +352,7 @@
 			<a onclick="selectSection('subSection', 'gazEngine');"><h4>GazEngine</h4></a>
 			<div id="gazEngine" class="subSection">
 				<p>
-					GazEngine is the middleware that I developed during my time at Media Design School and is used with the majority of the demos that follow (except for a couple that use the GDE middleware provided by Media Design School). It was based on earlier work I had done to create <a href="https://github.com/simple-entertainment/simplicity">the simplicity engine</a> but that engine was in C++11 which could not be used for school projects.
+					GazEngine is the middleware that I developed during my time at Media Design School and is used with the majority of the demos that follow (except for a couple that use the GDE middleware provided by Media Design School). It was based on earlier work I had done to create <a onclick="openSection('section', 'gameEngines');">The Simplicity Engine</a> but that engine was in C++11 which could not be used for school projects. <a onclick="openSection('section', 'gameEngines');">The Simplicity Engine</a> has now superceded GazEngine again.
 				</p>
 
 				<table>
