--- a/software.html
+++ b/software.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+		<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 
