--- a/osho.html
+++ b/osho.html
@@ -11,7 +11,7 @@
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 
-	<body>
+	<body onload="fixSlide();">
 		<div id="header">
 			<h1><a href="index.html">Gary Shawn Buyn / Prem Gyan</a></h1>
 			<div id="menu">
