Style upgrade and added ArtRage project.
Former-commit-id: d92884dc4ee29394ca107e999f1fcca12071bdc0

--- a/film.html
+++ b/film.html
@@ -29,24 +29,28 @@
 
 		<a onclick="selectSection('section', 'str8Gangsta');"><h3>Str8 Gangsta</h3></a>
 		<div id="str8Gangsta" class="section">
+			<div class="aside">
+				<video src="videos/str8-gangsta.ogg" controls="controls" preload="metadata">
+					No video for you sonny jim, your browser doesn't support it.
+				</video>
+			</div>
+
 			<p>
 				An instant cult classic. The first film officially made by simple entertainment (me). This film may or may not depict graphic violence and strong course language.
 			</p>
-
-			<video src="videos/str8-gangsta.ogg" controls="controls" preload="metadata">
-				No video for you sonny jim, your browser doesn't support it.
-			</video>
 		</div>
 		
 		<a onclick="selectSection('section', 'bigDeal');"><h3>Big Deal</h3></a>
 		<div id="bigDeal" class="section">
+			<div class="aside">
+				<video src="videos/big-deal.ogg" controls="controls" preload="metadata">
+					No video for you sonny jim, your browser doesn't support it.
+				</video>
+			</div>
+
 			<p>
 				Now, after numerous extensions to the release date and exceeding the budget 10 fold, the most anticipated film of Summer 07-08 is here! What's more, all the critics are hailing it as 'worth the wait' and 'revolutionary'. P.S. Why is it that every second film you see an add for is 'revolutionary'? That's bullshit.
 			</p>
-
-			<video src="videos/big-deal.ogg" controls="controls" preload="metadata">
-				No video for you sonny jim, your browser doesn't support it.
-			</video>
 		</div>
 	</body>
 
