--- a/osho.html
+++ b/osho.html
@@ -40,6 +40,10 @@
 
 		<a onclick="selectSection('section', 'samaya');"><h3>Samaya Ashram <a href="http://www.ashraminthebush.org.au/">(website)</a></h3></a>
 		<div id="samaya" class="section">
+			<div class="aside">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/9lkazFEMtp8" frameborder="0" allowfullscreen></iframe>
+			</div>
+
 			<p>
 				I spent 6 months at Samaya Ashram (the second half of 2013). It is a beautiful and intimate place filled with love and beautiful people. It is also a powerful place for self-transformation. Why did I leave again?
 			</p>
@@ -47,8 +51,6 @@
 			<p>
 				Oh... and this is where I got the name Prem Gyan. Prem = Love, Gyan = Wisdom. It was explained to me that I need to take the path of love to attain wisdom.
 			</p>
-
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/9lkazFEMtp8" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</body>
 
