--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Gary / Gyan</title>
 
+		<meta name=viewport content="width=device-width, initial-scale=1">
+
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
