Removed half-arsed camper stuff.
Former-commit-id: bcb388929e4f75537e46d4d4848607cc00591e78

--- a/campers.html
+++ b/campers.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="js/scripts.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
 
 	<body>
@@ -36,42 +36,20 @@
 				Gertrude was my first camper van. She was given an ugly name to match her... well... ugliness. When I bought her she was already fitted out but I decided it was shit, pulled everything out and started from scratch. Lots of fun! Sadly Gertrude died and was unable to complete her last mission to Edinburgh. May she rest in peace.
 			</p>
 
-			<a onclick="selectSection('subSection', 'before');"><h4>Before</h4></a>
-			<div id="before" class="subSection">
-			</div>
-
-			<a onclick="selectSection('subSection', 'theBuild');"><h4>The Build</h4></a>
-			<div id="theBuild" class="subSection">
-			</div>
-
-			<a onclick="selectSection('subSection', 'theJourney'); initGertrudeMap();"><h4>The Journey</h4></a>
-			<div id="theJourney" class="subSection">
-				<div id="gertrudeMap" style="width: 700px; height: 600px;"></div>
-			</div>
+			<p>
+				Coming soon...
+			</p>
 		</div>
 
-		<a onclick="selectSection('section', 'lucille'); initLucilleMap();"><h3>Lucille</h3></a>
+		<a onclick="selectSection('section', 'lucille');"><h3>Lucille</h3></a>
 		<div id="lucille" class="section">
 			<p>
 				Lucille was a 16 seater mini-bus. I whipped out all of her seats and fitted her as a luxury moving home. Some lucky guy picker her up for cheap since I was leaving europe and needed a quick sale during winter...
 			</p>
 
-			<a onclick="selectSection('subSection', 'before');"><h4>Before</h4></a>
-			<div id="theBuild" class="subSection">
-			</div>
-
-			<a onclick="selectSection('subSection', 'theBuild');"><h4>The Build</h4></a>
-			<div id="theBuild" class="subSection">
-			</div>
-
-			<a onclick="selectSection('subSection', 'after');"><h4>After</h4></a>
-			<div id="after" class="subSection">
-			</div>
-
-			<a onclick="selectSection('subSection', 'theJourney'); initLucilleMap();"><h4>The Journey</h4></a>
-			<div id="theJourney" class="subSection">
-				<div id="lucilleMap" style="width: 700px; height: 600px;"></div>
-			</div>
+			<p>
+				Coming soon...
+			</p>
 		</div>
 	</body>
 
