Minor wording correction
Former-commit-id: dc65f06ef2ae5170246f4ec48fa58579fb7af068

--- a/software.html
+++ b/software.html
@@ -38,7 +38,7 @@
 				</div>
 
 				<p>
-					I was part of the winning team in the Mile High competition held by <a href="http://www.hacktivate.me">Hacktivate</a>. I wrote the Java code. Check out this video of it (pause it at 0:46 to see me and my team with the trophy!):
+					I was part of the winning team in the Mile High competition held by <a href="http://www.hacktivate.me">Hacktivate</a>. I wrote the Java code. Check out the video (pause it at 0:46 to see me and my team with the trophy!).
 				</p>
 
 				<div class="roundButton">
