--- a/software.html
+++ b/software.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
 
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-		<script type="text/javascript" src="js/scripts.js"></script>
+		<script type="text/javascript" src="js/sections.js"></script>
 	</head>
 
 	<body>
