--- a/osho.html
+++ b/osho.html
@@ -9,6 +9,7 @@
 		<link rel="shortcut icon" href="images/favicon.ico" />
 		<link rel="stylesheet" type="text/css" href="css/fonts.css" />
 		<link rel="stylesheet" type="text/css" href="css/layout.css" />
+
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 	</head>
@@ -28,6 +29,13 @@
 		<p>
 			I was first introduced to Osho through the book "Tantra Experience". I was blown away by the way he wrote (or spoke as I later found out). He told the story so beautifully and was able to express spirituality without being really "spiritual". His meditations have easily been the most powerful meditative experiences of my life. No other meditations I have done have come close.
 		</p>
+
+		<a onclick="selectSection('section', 'oic');"><h3>OSHO Information Center, Auckland <a href="http://www.osho.nz">(website)</a></h3></a>
+		<div id="oic" class="section">
+			<p>
+				I created a basic website to provide information about Osho in New Zealand (primarily Osho in Auckland) and when I'm in town I try to help out where I can.
+			</p>
+		</div>
 
 		<a onclick="selectSection('section', 'oimr');"><h3>OSHO International Meditation Resort <a href="http://www.osho.com/visit">(website)</a></h3></a>
 		<div id="oimr" class="section">
