Improved software intro.
Former-commit-id: c3fc58e5ec1eeb2802ccf57085f733911a142b64

--- a/software.html
+++ b/software.html
@@ -27,7 +27,7 @@
 		</div>
 
 		<p>
-			I have a BCMS from the University of Waikato and half a dozen years of industry experience. I have done everything from enterprise to apps to games, from Java to C++, from Windows to Linux to Mac to Android. I love a good challenge and I have to say that I'm very good at it.
+			I have a BCMS from the University of Waikato and half a dozen years of industry experience. I have a passion for high quality code that is as simple as possible, I pay a lot of attention to the details and I learn new tech and concepts very quickly.
 		</p>
 
 		<a onclick="selectSection('section', 'competitions');"><h3>Competitions</h3></a>
