Moved the web links out of titles.
Former-commit-id: a1a8c52a6c07333934c595d172545bb90376a578

--- a/osho.html
+++ b/osho.html
@@ -30,15 +30,27 @@
 			I was first introduced to Osho through the book "Tantra Experience". I was blown away by the way he wrote (or spoke as I later found out). He told the story so beautifully and was able to express spirituality without being really "spiritual". His meditations have easily been the most powerful meditative experiences of my life. No other meditations I have done have come close.
 		</p>
 
-		<a onclick="selectSection('section', 'oic');"><h3>OSHO Information Center, Auckland <a href="http://www.osho.nz">(website)</a></h3></a>
+		<a onclick="selectSection('section', 'oic');"><h3>OSHO Information Center, Auckland</h3></a>
 		<div id="oic" class="section">
+			<div class="roundButton">
+				<a href="http://www.osho.nz">
+					<img src="images/website.png" alt="Website" />
+				</a>
+			</div>
+
 			<p>
 				I created a basic website to provide information about Osho in New Zealand (primarily Osho in Auckland) and when I'm in town I try to help out where I can.
 			</p>
 		</div>
 
-		<a onclick="selectSection('section', 'oimr');"><h3>OSHO International Meditation Resort <a href="http://www.osho.com/visit">(website)</a></h3></a>
+		<a onclick="selectSection('section', 'oimr');"><h3>OSHO International Meditation Resort</h3></a>
 		<div id="oimr" class="section">
+			<div class="roundButton">
+				<a href="http://www.osho.com/visit">
+					<img src="images/website.png" alt="Website" />
+				</a>
+			</div>
+
 			<p>
 				I spent 3 months in the meditation resort, Pune, India (Nov 2014 - Feb 2015). It is a place of experimentation. There is a lot on offer, lots of OSHO meditations, the OSHO meditative therapies and various courses and sessions.
 			</p>
@@ -48,10 +60,16 @@
 			</p>
 		</div>
 
-		<a onclick="selectSection('section', 'samaya');"><h3>Samaya Ashram <a href="http://www.ashraminthebush.org.au/">(website)</a></h3></a>
+		<a onclick="selectSection('section', 'samaya');"><h3>Samaya Ashram</h3></a>
 		<div id="samaya" class="section">
 			<div class="aside">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/9lkazFEMtp8" frameborder="0" allowfullscreen></iframe>
+			</div>
+
+			<div class="roundButton">
+				<a href="http://www.ashraminthebush.org.au">
+					<img src="images/website.png" alt="Website" />
+				</a>
 			</div>
 
 			<p>
