--- a/software.html
+++ b/software.html
@@ -206,8 +206,14 @@
 
 		<a onclick="selectSection('section', 'professional');"><h3>Professional</h3></a>
 		<div id="professional" class="section">
-			<a onclick="selectSection('subSection', 'rushDigital');"><h4>Rush Digital <a href="http://rushdigital.nz">(website)</a></h4></a>
+			<a onclick="selectSection('subSection', 'rushDigital');"><h4>Rush Digital</h4></a>
 			<div id="rushDigital" class="subSection">
+				<div class="roundButton">
+					<a href="http://rushdigital.nz">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
+
 				<p>
 					I got to work on a lot of projects that were very technically challenging with a wide range of platforms and technologies.
 				</p>
@@ -322,8 +328,14 @@
 				</div>
 			</div>
 
-			<a onclick="selectSection('subSection', 'bravuraSolutions');"><h4>Bravura Solutions <a href="http://www.bravurasolutions.com">(website)</a></h4></a>
+			<a onclick="selectSection('subSection', 'bravuraSolutions');"><h4>Bravura Solutions</h4></a>
 			<div id="bravuraSolutions" class="subSection">
+				<div class="roundButton">
+					<a href="http://www.bravurasolutions.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
+
 				<p>
 					I worked primarily on two of their web based enterprise solutions, <a href="http://bravurasolutions.com/solutions/products/wealth-and-life-administration-systems/sonata">Sonata</a> (Web) and eTalis in Agile environments. Both used technology stacks that I had almost no experience with but by the end of my time there I was the authority on most of them in the office where I worked due to my quick ability to learn.
 				</p>
@@ -337,8 +349,14 @@
 				</p>
 			</div>
 
-			<a onclick="selectSection('subSection', 'matrikon');"><h4>Matrikon <a href="http://www.matrikon.com">(website)</a></h4></a>
+			<a onclick="selectSection('subSection', 'matrikon');"><h4>Matrikon</h4></a>
 			<div id="matrikon" class="subSection">
+				<div class="roundButton">
+					<a href="http://www.matrikon.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
+
 				<p>
 					I developed customizations and extensions to the <a href="http://www.maximoassetmanagement.com">Maximo</a> system, an enterprise quality J2EE framework owned by IBM. I also developed integrations to Oracle Apps, SAP and others. The majority of this work was Java coding and database scripting with XML and JSP for the UI elements.
 				</p>
@@ -352,8 +370,14 @@
 				</p>
 			</div>
 
-			<a onclick="selectSection('subSection', 'quadratek');"><h4>Quadratek <a href="http://www.quadratekgroup.com">(website)</a></h4></a>
+			<a onclick="selectSection('subSection', 'quadratek');"><h4>Quadratek</h4></a>
 			<div id="quadratek" class="subSection">
+				<div class="roundButton">
+					<a href="http://www.quadratekgroup.com">
+						<img src="images/website.png" alt="Website" />
+					</a>
+				</div>
+
 				<p>
 					I was given a three month contract to consult and develop on a military satellite communications project for the UAE with their client <a href="http://www.astrium.eads.net/">EADS Astrium</a>. In this instance the Service Management flavour of Maximo was being used for the ordering of certain communications required for military deployments.
 				</p>
@@ -368,8 +392,14 @@
 			</div>
 		</div>
 
-		<a onclick="selectSection('section', 'mediaDesignSchool');"><h3>Media Design School <a href="http://www.mediadesignschool.com">(website)</a></h3></a>
+		<a onclick="selectSection('section', 'mediaDesignSchool');"><h3>Media Design School</h3></a>
 		<div id="mediaDesignSchool" class="section">
+			<div class="roundButton">
+				<a href="http://www.mediadesignschool.com">
+					<img src="images/website.png" alt="Website" />
+				</a>
+			</div>
+
 			<p>
 				Here are a bunch of demos from my studies at Media Design School.
 			</p>
